--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -3,6 +3,9 @@
 @import "header";
 @import "pricing-header";
 @import "intro";
+@import "work";
+@import "data";
+@import "connect";
 @import "pricing-hero";
 @import "contact-hero";
 @import "about-intro";
