--- a/scss/blocks/_work.scss
+++ b/scss/blocks/_work.scss
@@ -1,5 +1,6 @@
 .work{
   width: 100%;
+  background-color: inherit;
   background-image: url("../images/work-bg.svg");
   background-position: top center;
   background-size: cover;
