--- a/css/main.css
+++ b/css/main.css
@@ -394,13 +394,12 @@ body {
 
 .site-header {
   padding-top: 40px;
-  padding-bottom: 70px;
+  padding-bottom: 166px;
   position: relative;
 }
 
-.home--header {
-  padding: 40px 0 166px;
-  background-position: 50% calc(50% - 275px);
+.site-body {
+  background-position: 50% calc(50% - 290px);
 }
 
 .site-header__wrapper {
@@ -455,6 +454,7 @@ body {
 }
 
 .sitenav__link {
+  font-family: "Public Sans", serif;
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -470,6 +470,7 @@ body {
 
 .site-header__btn {
   padding: 15px 25px;
+  font-family: "Public Sans", "Times New Roman", serif;
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -498,7 +499,9 @@ body {
   height: 100vh;
   margin-left: auto;
   padding: 139px 24px 0 24px;
-  background-color: #1B262F;
+  background-image: url("../../images/menubg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
   box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
 }
 
@@ -546,8 +549,10 @@ body {
     background-size: 780px 780px;
     background-position: calc(50% + 468px) calc(50% - 406px);
   }
+  .site-body {
+    background-position: 50% calc(50% - 360px);
+  }
   .home--header {
-    padding: 40px 0 212px;
     background-position: 50% calc(50% - 262px);
   }
   .site-header__menu-btn {
@@ -606,7 +611,7 @@ body {
   }
   .site-header {
     padding-top: 40px;
-    padding-bottom: 0;
+    padding-bottom: 212px;
     position: relative;
     background-color: transparent;
   }
@@ -713,11 +718,35 @@ body {
   display: inline-block;
   width: 100%;
   margin-bottom: 16px;
-  padding: 15px 27px;
+  padding: 15px 179px 15px 27px;
   background-color: #FBFCFE;
   box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
   border: none;
   border-radius: 24px;
+}
+.intro__input::-moz-placeholder {
+  font-family: "Public Sans";
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  color: #36536B;
+  opacity: 0.5;
+}
+.intro__input:-ms-input-placeholder {
+  font-family: "Public Sans";
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  color: #36536B;
+  opacity: 0.5;
+}
+.intro__input::placeholder {
+  font-family: "Public Sans";
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  color: #36536B;
+  opacity: 0.5;
 }
 
 .intro__btn {
@@ -846,6 +875,7 @@ body {
 }
 .work {
   width: 100%;
+  background-color: inherit;
   background-image: url("../images/work-bg.svg");
   background-position: top center;
   background-size: cover;
@@ -978,6 +1008,9 @@ body {
 
 .data__item:first-child {
   margin-bottom: 50px;
+}
+.data__item:first-child .data__img {
+  margin-right: 30px;
 }
 
 .data__img {
@@ -1908,6 +1941,7 @@ body {
 .about-intro__topic {
   margin: 0;
   margin-bottom: 40px;
+  font-family: "DM Serif Display";
   font-weight: 400;
   font-size: 32px;
   line-height: 36px;
@@ -1932,6 +1966,7 @@ body {
 .about-intro__title {
   margin: 0;
   margin-bottom: 16px;
+  font-family: "DM Serif Display";
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
@@ -1940,6 +1975,7 @@ body {
 }
 
 .about-intro__text {
+  font-family: "Public Sans";
   margin: 0;
   font-weight: 400;
   font-size: 15px;
@@ -1963,6 +1999,7 @@ body {
   .about-intro__topic {
     margin: 0;
     margin-bottom: 54px;
+    font-family: "DM Serif Display";
     font-weight: 400;
     font-size: 48px;
     line-height: 56px;
@@ -1986,6 +2023,7 @@ body {
     width: 30%;
     margin: 0;
     margin-bottom: 16px;
+    font-family: "DM Serif Display";
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
@@ -1995,6 +2033,7 @@ body {
   .about-intro__text {
     width: 70%;
     margin: 0;
+    font-family: "Public Sans";
     font-weight: 400;
     font-size: 15px;
     line-height: 28px;
@@ -2050,6 +2089,7 @@ body {
   .about-intro__text {
     width: 70%;
     margin: 0;
+    font-family: "Public Sans";
     font-weight: 400;
     font-size: 15px;
     line-height: 28px;
@@ -2157,6 +2197,7 @@ body {
 
 .content__number-info {
   padding-top: 16px;
+  font-family: "Public Sans";
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
@@ -2194,6 +2235,7 @@ body {
 .content__item-title {
   margin: 0;
   margin-bottom: 16px;
+  font-family: "DM Serif Display";
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
@@ -2204,6 +2246,7 @@ body {
 
 .content__item-text {
   margin: 0;
+  font-family: "Public Sans";
   font-weight: 400;
   font-size: 15px;
   line-height: 28px;
@@ -2214,6 +2257,7 @@ body {
 .content__topic {
   margin: 0;
   margin-bottom: 32px;
+  font-family: "DM Serif Display";
   font-size: 32px;
   line-height: 36px;
   text-align: center;
@@ -2236,6 +2280,7 @@ body {
 }
 
 input::-moz-placeholder {
+  font-family: "Public Sans";
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -2245,6 +2290,7 @@ input::-moz-placeholder {
 }
 
 input:-ms-input-placeholder {
+  font-family: "Public Sans";
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -2254,6 +2300,7 @@ input:-ms-input-placeholder {
 }
 
 input::placeholder {
+  font-family: "Public Sans";
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
@@ -2267,6 +2314,7 @@ input::placeholder {
   justify-content: center;
   margin: 0 auto;
   padding: 15px 50px;
+  font-family: "Public Sans";
   font-weight: 700;
   font-size: 15px;
   line-height: 18px;
