--- a/scss/blocks/_about-content.scss
+++ b/scss/blocks/_about-content.scss
@@ -1,5 +1,5 @@
   /* ABOUT PAGE CONTENT SECTION */
-  
+
   .content {
     padding-top: 65px;
     padding-bottom: 80px;
@@ -14,7 +14,7 @@
     list-style: none;
     position: relative;
     margin-bottom: 65px;
-    
+
     &::before {
         content: "";
         width: 100%;
@@ -25,9 +25,9 @@
         opacity: 0.25;
         background-color: #36536B;
         position: absolute;
-        
+
     }
-    
+
     &::after {
         content: "";
         width: 100%;
@@ -38,29 +38,30 @@
         opacity: 0.25;
         background-color: #36536B;
         position: absolute;
-        
+
     }
 }
 
 .content__number-item {
-    
+
     display: flex;
     flex-direction: column;
-    
+
     &:not(:last-child) {
         margin-bottom: 32px;
     }
-    
+
     &:nth-child(3) {
         padding-bottom: 16px;
-        
+
     }
-    
-    
+
+
 }
 
 .content__number-info {
     padding-top: 16px;
+    font-family: 'Public Sans';
     font-weight: 400;
     font-size: 16px;
     line-height: 28px;
@@ -86,14 +87,14 @@
     margin-bottom: 48px;
     padding: 0;
     list-style: none;
-    
+
 }
 
 .content__item {
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
-    
+
     &:not(:last-child) {
         margin-bottom: 48px;
     }
@@ -102,6 +103,7 @@
 .content__item-title {
     margin: 0;
     margin-bottom: 16px;
+    font-family: 'DM Serif Display';
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
@@ -112,6 +114,7 @@
 
 .content__item-text {
     margin: 0;
+    font-family: 'Public Sans';
     font-weight: 400;
     font-size: 15px;
     line-height: 28px;
@@ -124,6 +127,7 @@
 .content__topic {
     margin: 0;
     margin-bottom: 32px;
+    font-family: 'DM Serif Display';
     font-size: 32px;
     line-height: 36px;
     text-align: center;
@@ -146,13 +150,14 @@
 }
 
 input::placeholder {
+    font-family: 'Public Sans';
     font-weight: 700;
     font-size: 15px;
     line-height: 18px;
     color: #36536B;
     mix-blend-mode: normal;
     opacity: 0.5;
-    
+
 }
 
 .content__btn {
@@ -160,6 +165,7 @@ input::placeholder {
     justify-content: center;
     margin: 0 auto;
     padding: 15px 50px;
+    font-family: 'Public Sans';
     font-weight: 700;
     font-size: 15px;
     line-height: 18px;
@@ -178,43 +184,43 @@ input::placeholder {
         padding-bottom: 100px;
         background-color: #EDF3F8;
     }
-    
-    
-    
+
+
+
     .content__number-list {
         display: flex;
         justify-content: space-around;
         margin: 0;
         padding: 0;
         list-style: none;
-        
+
         margin-bottom: 65px;
-        
+
         &::before {
             display: none;
         }
-        
+
         &::after {
             display: none;
         }
-        
+
     }
-    
+
     .content__number-item {
-        
+
         display: flex;
         flex-direction: column;
         position: relative;
-        
+
         &:not(:last-child) {
             margin-bottom: 0;
         }
-        
+
         &:nth-child(3) {
             padding-bottom: 0;
         }
-        
-        
+
+
         &::before {
             content: "";
             width: 100%;
@@ -225,9 +231,9 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
         &::after {
             content: "";
             width: 100%;
@@ -239,12 +245,12 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
     }
-    
-    
+
+
     .content__number-info {
         padding-top: 16px;
         font-weight: 400;
@@ -256,7 +262,7 @@ input::placeholder {
         opacity: 0.7;
         visibility: hidden;
     }
-    
+
     .content__number {
         font-weight: 400;
         font-size: 56px;
@@ -265,31 +271,31 @@ input::placeholder {
         color: #BA4270;
         padding-bottom: 16px;
     }
-    
-    
-    
-    
+
+
+
+
     .content__list {
         margin: 0;
         margin-bottom: 72px;
         padding: 0;
         list-style: none;
-        
+
     }
-    
+
     .content__item {
         width: 100%;
         max-width: 800px;
         margin: 0 auto;
         display: flex;
         text-align: start;
-        
+
         &:not(:last-child) {
             margin-bottom: 64px;
         }
     }
-    
-    
+
+
     .content__item-title {
         width: 30%;
         margin: 0;
@@ -299,7 +305,7 @@ input::placeholder {
         letter-spacing: -0.246154px;
         color: #36536B;
     }
-    
+
     .content__item-text {
         width: 70%;
         margin: 0;
@@ -309,9 +315,9 @@ input::placeholder {
         color: #6C8294;
         text-align: start;
     }
-    
-    
-    
+
+
+
     .content__topic {
         margin: 0;
         margin-bottom: 40px;
@@ -322,7 +328,7 @@ input::placeholder {
         letter-spacing: -0.369231px;
         color: #36536B;
     }
-    
+
     .content__form {
         display: flex;
         justify-content: center;
@@ -330,9 +336,9 @@ input::placeholder {
         width: 100%;
         max-width: 600px;
         margin: 0 auto;
-        
+
     }
-    
+
     .content__input {
         width: 70%;
         margin-bottom: 0;
@@ -344,7 +350,7 @@ input::placeholder {
         border-radius: 24px;
         border: transparent;
     }
-    
+
     input::placeholder {
         font-weight: 700;
         font-size: 15px;
@@ -352,9 +358,9 @@ input::placeholder {
         color: #36536B;
         mix-blend-mode: normal;
         opacity: 0.5;
-        
+
     }
-    
+
     .content__btn {
         width: 30%;
         margin-right: 0;
@@ -376,7 +382,7 @@ input::placeholder {
 
 @media screen and (min-width:740px) {
     .content__number-item {
-        
+
         &::before {
             content: "";
             width: 100%;
@@ -387,9 +393,9 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
         &::after {
             content: "";
             width: 100%;
@@ -401,17 +407,17 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
-            
-            
+
+
+
         }
     }
-    
+
 }
 
 @media screen and (min-width:780px) {
     .content__number-item {
-        
+
         &::before {
             content: "";
             width: 100%;
@@ -422,9 +428,9 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
         &::after {
             content: "";
             width: 100%;
@@ -436,17 +442,17 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
-            
-            
+
+
+
         }
     }
-    
+
 }
 
 @media screen and (min-width:850px) {
     .content__number-item {
-        
+
         &::before {
             content: "";
             width: 100%;
@@ -457,9 +463,9 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
         &::after {
             content: "";
             width: 100%;
@@ -471,17 +477,17 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
-            
-            
+
+
+
         }
     }
-    
+
 }
 
 @media screen and (min-width:920px) {
     .content__number-item {
-        
+
         &::before {
             content: "";
             width: 100%;
@@ -492,9 +498,9 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
         &::after {
             content: "";
             width: 100%;
@@ -506,12 +512,12 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
-            
-            
+
+
+
         }
     }
-    
+
 }
 
 
@@ -521,43 +527,43 @@ input::placeholder {
         padding-bottom: 96px;
         background-color: #EDF3F8;
     }
-    
-    
-    
+
+
+
     .content__number-list {
         display: flex;
         justify-content: space-around;
         margin: 0;
         padding: 0;
         list-style: none;
-        
+
         margin-bottom: 72px;
-        
+
         &::before {
             display: none;
         }
-        
+
         &::after {
             display: none;
         }
-        
+
     }
-    
+
     .content__number-item {
-        
+
         display: flex;
         flex-direction: column;
         position: relative;
-        
+
         &:not(:last-child) {
             margin-bottom: 0;
         }
-        
+
         &:nth-child(3) {
             padding-bottom: 0;
         }
-        
-        
+
+
         &::before {
             content: "";
             width: 100%;
@@ -568,9 +574,9 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
         &::after {
             content: "";
             width: 100%;
@@ -582,12 +588,12 @@ input::placeholder {
             opacity: 0.25;
             background-color: #36536B;
             position: absolute;
-            
+
         }
-        
+
     }
-    
-    
+
+
     .content__number-info {
         padding-top: 16px;
         font-weight: 400;
@@ -598,7 +604,7 @@ input::placeholder {
         mix-blend-mode: normal;
         opacity: 0.7;
     }
-    
+
     .content__number {
         font-weight: 400;
         font-size: 56px;
@@ -607,30 +613,30 @@ input::placeholder {
         color: #BA4270;
         padding-bottom: 16px;
     }
-    
-    
-    
-    
+
+
+
+
     .content__list {
         margin: 0;
         margin-bottom: 72px;
         padding: 0;
         list-style: none;
-        
+
     }
-    
+
     .content__item {
         width: 100%;
         max-width: 800px;
         margin: 0 auto;
         display: flex;
         text-align: start;
-        
+
         &:not(:last-child) {
             margin-bottom: 64px;
         }
     }
-    
+
     .content__item-title {
         width: 30%;
         margin: 0;
@@ -640,7 +646,7 @@ input::placeholder {
         letter-spacing: -0.246154px;
         color: #36536B;
     }
-    
+
     .content__item-text {
         width: 70%;
         margin: 0;
@@ -650,9 +656,9 @@ input::placeholder {
         color: #6C8294;
         text-align: start;
     }
-    
-    
-    
+
+
+
     .content__topic {
         margin: 0;
         margin-bottom: 0;
@@ -663,13 +669,13 @@ input::placeholder {
         letter-spacing: -0.369231px;
         color: #36536B;
     }
-    
+
     .content__form-box {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-    
+
     .content__form {
         display: flex;
         justify-content: center;
@@ -678,9 +684,9 @@ input::placeholder {
         max-width: 600px;
         margin-right: 0;
         margin-left: 0;
-        
+
     }
-    
+
     .content__input {
         width: 70%;
         margin-bottom: 0;
@@ -693,7 +699,7 @@ input::placeholder {
         border: transparent;
         cursor: pointer;
     }
-    
+
     input::placeholder {
         font-weight: 700;
         font-size: 15px;
@@ -701,9 +707,9 @@ input::placeholder {
         color: #36536B;
         mix-blend-mode: normal;
         opacity: 0.5;
-        
+
     }
-    
+
     .content__btn {
         width: 30%;
         margin-right: 0;
@@ -720,11 +726,11 @@ input::placeholder {
         border-radius: 24px;
         border: transparent;
         cursor: pointer;
-        
-        
+
+
         &:hover {
             background-color: #DA6D97;
         }
-        
+
     }
 }
